textmodes/flyspell.el: Delay for otherchars as for normal word components.
(flyspell-check-pre-word-p, 
 flyspell-check-word-p, 
 flyspell-debug-signal-word-checked): 

Use for otherchars the same delay used for other word components, so word
is not inmediately checked unless we are in a char that is neither a normal
word component nor an otherchar.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-16  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
+
+	* flyspell.el (flyspell-check-pre-word-p, flyspell-check-word-p)
+	(flyspell-debug-signal-word-checked): Delay for otherchars as for
+	normal word components.
+
 2012-05-16  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* minibuffer.el (completion--sifn-requote): Fix last change.
