Move word search functions from search.c to isearch.el (bug#10145, bug#11381).
* lisp/isearch.el (word-search-regexp, word-search-backward)
(word-search-forward, word-search-backward-lax)
(word-search-forward-lax): Move functions from search.c.

* src/search.c (Fword_search_regexp, Fword_search_backward)
(Fword_search_forward, Fword_search_backward_lax)
(Fword_search_forward_lax): Move functions to isearch.el.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-05-17  Juri Linkov  <juri@jurta.org>
+
+	* isearch.el (word-search-regexp, word-search-backward)
+	(word-search-forward, word-search-backward-lax)
+	(word-search-forward-lax): Move functions from search.c
+	(bug#10145, bug#11381).
+
 2012-05-16  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
 
 	* flyspell.el (flyspell-check-pre-word-p, flyspell-check-word-p)
