Install a self-contained NS build's libexec directly into the right place This is rather than installing it in one place then moving it.
* configure.in (archlibdir): Set it for self-contained ns builds.
(libexecdir): Don't expand it now (this is mainly cosmetic).

* Makefile.in (ns_appbindir, ns_appresdir):
Move them before things that may refer to them.
(install-arch-dep): No need to relocate self-contained ns libexec.

* lib-src/Makefile.in (ns_appbindir): New, set by configure.

--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-17  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (ns_appbindir): New, set by configure.
+
 2012-05-12  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (MKDIR_P): New, set by configure.
