--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2012-05-17  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (ns_appbindir, ns_appresdir):
+	Move them before things that may refer to them.
+	(install-arch-dep): No need to relocate self-contained ns libexec.
+
+	* configure.in (archlibdir): Set it for self-contained ns builds.
+	(libexecdir): Don't expand it now (this is mainly cosmetic).
+
 2012-05-16  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* configure.in: Simplify by removing CPP etc.
