--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,219 @@
+2012-05-16  Fabián Ezequiel Gallina  <fgallina@cuca>
+
+	* progmodes/python.el: New python.el merge.
+	(python-guess-indent): Obsolete Var. Replaced by
+	python-indent-guess-indent-offset.
+	(python-indent): Obsolete Var. Replaced by python-indent-offset.
+	(python-python-command,python-jython-command): Delete
+	Var. Replaced by python-shell-interpreter.
+	(python-pdbtrack-do-tracking-p): Delete Var. Replaced by
+	python-pdbtrack-activate.
+	(python-use-skeletons): Delete Var. Replaced by
+	python-skeleton-autoinsert.
+	(inferior-python-filter-regexp, python-continuation-offset)
+	(python-honour-comment-indentation, python-indent-string-contents)
+	(python-jython-packages, python-mode-hook)
+	(python-pdbtrack-minor-mode-string, python-remove-cwd-from-path)
+	(python-shell-prompt-alist, python-source-modes): Delete
+	defcustoms.
+	(python-check-buffer-name, python-eldoc-setup-code)
+	(python-eldoc-string-code, python-ffap-setup-code)
+	(python-ffap-string-code, python-fill-comment-function)
+	(python-fill-decorator-function, python-fill-paren-function)
+	(python-fill-string-function, python-imenu-include-defun-type)
+	(python-imenu-make-tree, python-imenu-subtree-root-label)
+	(python-indent-guess-indent-offset, python-indent-offset)
+	(python-pdbtrack-activate, python-pdbtrack-stacktrace-info-regexp)
+	(python-shell-buffer-name, python-shell-compilation-regexp-alist)
+	(python-shell-completion-module-string-code)
+	(python-shell-completion-pdb-string-code)
+	(python-shell-completion-setup-code)
+	(python-shell-completion-string-code)
+	(python-shell-enable-font-lock, python-shell-exec-path)
+	(python-shell-extra-pythonpaths)
+	(python-shell-internal-buffer-name, python-shell-interpreter)
+	(python-shell-interpreter-args, python-shell-process-environment)
+	(python-shell-prompt-block-regexp)
+	(python-shell-prompt-output-regexp)
+	(python-shell-prompt-pdb-regexp, python-shell-prompt-regexp)
+	(python-shell-send-setup-max-wait, python-shell-setup-codes)
+	(python-shell-virtualenv-path, python-skeleton-autoinsert): New
+	defcustoms.
+	(brm-menu, eldoc-documentation-function, inferior-python-mode-map)
+	(inferior-python-mode-syntax-table, python--prompt-regexp)
+	(python-buffer, python-command python-python-command)
+	(python-default-template, python-imports, python-indent-index)
+	(python-indent-list, python-indent-list-length)
+	(python-mode-running, python-pdbtrack-is-tracking-p)
+	(python-preoutput-continuation, python-preoutput-leftover)
+	(python-preoutput-result, python-preoutput-skip-next-prompt)
+	(python-prev-dir/file, python-recursing)
+	(python-saved-check-command, python-version-checked)
+	(python-which-func-length-limit, view-return-to-alist): Delete
+	Vars.
+	(python-check-custom-command, python-dotty-syntax-table)
+	(python-imenu-index-alist, python-indent-current-level)
+	(python-indent-dedenters, python-indent-levels)
+	(python-nav-beginning-of-defun-regexp)
+	(python-nav-list-defun-positions-cache)
+	(python-pdbtrack-buffers-to-kill, python-pdbtrack-tracked-buffer)
+	(python-shell-internal-buffer, python-skeleton-available): New
+	Vars.
+	(def-python-skeleton): Delete Macro. Obsoleted by
+	python-skeleton-define.
+	(python-define-auxiliary-skeleton, python-rx)
+	(python-skeleton-define): New Macros.
+	(python-insert-*): Delete Commands.
+	(python-insert-class): Delete Command. Replaced by python-skeleton-class.
+	(python-insert-def): Delete Command. Replaced by python-skeleton-def.
+	(python-insert-for'): Delete Command. Replaced by python-skeleton-for.
+	(python-insert-if): Delete Command. Replaced by python-skeleton-if.
+	(python-insert-try/except): Delete Command. Replaced by
+	python-skeleton-try.
+	(python-insert-try/finally): Delete Command. Replaced by
+	python-skeleton-try.
+	(python-insert-while): Delete Command. Replaced by
+	python-skeleton-while.
+	(python-skeleton-class, python-skeleton-def, python-skeleton-for)
+	(python-skeleton-if, python-skeleton-try, python-skeleton-while):
+	New commands.
+	(python-backspace): Delete Command. Replaced by
+	python-indent-dedent-line-backspace.
+	(python-electric-colon): Delete Command. Replaced by
+	python-indent-electric-colon.
+	(python-guess-indent): Delete Command. Replaced by
+	python-indent-guess-indent-offset.
+	(python-shift-left): Delete Command. Replaced by
+	python-indent-shift-left.
+	(python-shift-right): Delete Command. Replaced by
+	python-indent-shift-right.
+	(python-indent-dedent-line-backspace)
+	(python-indent-electric-colon, python-indent-guess-indent-offset)
+	(python-indent-shift-left, python-indent-shift-right): New
+	Commands.
+	(python-find-function): Delete Command. Replaced by
+	python-nav-jump-to-defun.
+	(python-next-statement): Delete Command. Replaced by
+	python-nav-forward-sentence.
+	(python-previous-statement): Delete Command. Replaced by
+	python-nav-backward-sentence.
+	(python-fill-paragraph): Delete Command. Replaced by
+	python-fill-paragraph-function.
+	(python-nav-jump-to-defun, python-nav-forward-sentence)
+	(python-nav-backward-sentence, python-fill-paragraph-function):
+	New Commands.
+	(python-send-buffer): Delete Command. Replaced by
+	python-shell-send-buffer.
+	(python-send-defun): Delete Command. Replaced by
+	python-shell-send-defun.
+	(python-send-region): Delete Command. Replaced by
+	python-shell-send-region.
+	(python-send-region-and-go): Delete Command. Replaced by
+	python-shell-send-region + python-shell-switch-to-shell.
+	(python-send-string): Delete Command. Replaced by
+	python-shell-send-string.
+	(python-switch-to-python): Delete Command. Replaced by
+	python-shell-switch-to-shell.
+	(python-shell-send-buffer, python-shell-send-defun)
+	(python-shell-send-region, python-shell-send-region)
+	(python-shell-send-string, python-shell-switch-to-shell): New
+	Commands.
+	(python-describe-symbol): Delete Command. Replaced by
+	python-eldoc-at-point.
+	(python-eldoc-at-point): New Command.
+	(python--set-prompt-regexp, python-args-to-list)
+	(python-after-info-look, python-check-version)
+	(python-check-comint-prompt, python-find-imports)
+	(python-execute-file, turn-off-pdbtrack, turn-on-pdbtrack)
+	(python-unload-function, python-expand-template)
+	(python-maybe-jython, python-preoutput-filter)
+	(python-pdbtrack-get-source-buffer)
+	(python-pdbtrack-grub-for-buffer, python-pdbtrack-overlay-arrow)
+	(python-pdbtrack-toggle-stack-tracking)
+	(python-pdbtrack-track-stack-file, python-initial-text)
+	(python-first-word, python-comment-line-p, python-send-command)
+	(python-setup-brm, python-sentinel, python-set-proc)
+	(python-skip-out, python-input-filter, python-outdent-p)
+	(python-outline-level, python-backslash-continuation-line-p)
+	(python-end-of-block, python-end-of-statement, python-mark-block)
+	(python-beginning-of-block, python-beginning-of-statement)
+	(python-blank-line-p, python-beginning-of-string)
+	(python-open-block-statement-p): Delete functions.
+	(python-indent-line, python-indent-line-1): Delete
+	functions. Replaced by python-indent-line.
+	(python-indentation-levels): Delete function. Replaced by
+	python-indent-calculate-levels.
+	(python-proc): Delete Function. Replaced by
+	python-shell-get-process.
+	(python-send-receive): Delete Function. Replaced by
+	python-shell-send-string-no-output.
+	(python-module-path): Delete Function. Replaced by
+	python-ffap-module-path.
+	(python-completion-at-point): Delete Function. Replaced by
+	python-completion-complete-at-point.
+	(python-load-file): Delete Function. Replaced by
+	python-shell-send-file.
+	(python-calculate-indentation): Delete Function. Replaced by
+	python-indent-calculate-indentation.
+	(python-skip-comments/blanks): Delete Function. Replaced by
+	python-util-forward-comment.
+	(python-continuation-line-p): Delete Function. Replaced by
+	python-info-continuation-line-p.
+	(python-which-func, python-current-defun): Delete
+	Function. Replaced by python-info-current-defun.
+	(python-indentation-levels): Delete Function. Replaced by
+	python-indent-calculate-levels.
+	(python-beginning-of-defun): Delete Function. Replaced by
+	python-nav-beginning-of-defun.
+	(python-close-block-statement-p, python-block-end-p): Delete
+	Function. Replaced by python-info-closing-block.
+	(python-symbol-completions): Delete Function. Replaced by
+	python-completion-complete-at-point.
+	(python-comint-output-filter-function)
+	(python-eldoc--get-doc-at-point, python-end-of-defun-function)
+	(python-fill-comment, python-fill-decorator, python-fill-paren)
+	(python-fill-string, python-imenu-make-element-tree)
+	(python-imenu-make-tree, python-imenu-tree-assoc)
+	(python-indent-context, python-indent-dedent-line)
+	(python-indent-line-function)
+	(python-indent-post-self-insert-function)
+	(python-indent-toggle-levels)
+	(python-info-assignment-continuation-line-p)
+	(python-info-beginning-of-backlash)
+	(python-info-block-continuation-line-p)
+	(python-info-closing-block-message, python-info-current-defun)
+	(python-info-line-ends-backslash-p)
+	(python-info-looking-at-beginning-of-defun)
+	(python-info-ppss-context, python-info-ppss-context-type)
+	(python-nav-list-defun-positions, python-nav-read-defun)
+	(python-nav-sentence-end, python-nav-sentence-start)
+	(python-pdbtrack-comint-output-filter-function)
+	(python-pdbtrack-set-tracked-buffer)
+	(python-shell-calculate-exec-path)
+	(python-shell-calculate-process-environment)
+	(python-shell-completion--do-completion-at-point)
+	(python-shell-completion--get-completions)
+	(python-shell-completion-complete-at-point)
+	(python-shell-completion-complete-or-indent)
+	(python-shell-get-or-create-process)
+	(python-shell-get-process-name)
+	(python-shell-internal-get-or-create-process)
+	(python-shell-internal-get-process-name)
+	(python-shell-internal-send-string, python-shell-make-comint)
+	(python-shell-parse-command, python-shell-send-setup-code)
+	(python-skeleton-add-menu-items)
+	(python-util-clone-local-variables, python-util-position)
+	(run-python-internal, python-indent-line)
+	(python-indentation-levels, python-shell-get-process)
+	(python-shell-send-string-no-output, python-ffap-module-path)
+	(python-completion-complete-at-point, python-shell-send-file)
+	(python-indent-calculate-indentation, python-util-forward-comment)
+	(python-info-continuation-line-p, python-info-current-defun)
+	(python-indent-calculate-levels, python-nav-beginning-of-defun)
+	(python-beginning-of-defun-function, python-info-closing-block)
+	(python-completion-complete-at-point): New functions.
+	(run-python): Change arguments. New API Requirements.
+
 2012-05-17  Juri Linkov  <juri@jurta.org>
 
 	* isearch.el (word-search-regexp, word-search-backward)
