--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-17  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (write_subdir): New.
+	(install-arch-indep): Use $write_subdir.
+
 	* configure.in (docdir, etcdir, infodir, lispdir):
 	For a self-contained ns build, set these to the appropriate values.
 	* Makefile.in (install-arch-dep): No need to move info/ any more.
