--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2012-05-17  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (write_subdir): New.
-	(install-arch-indep): Use $write_subdir.
+	(install-arch-indep, install-arch-dep): Use $write_subdir.
 
 	* configure.in (docdir, etcdir, infodir, lispdir):
 	For a self-contained ns build, set these to the appropriate values.
