--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-17  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (write_subdir): Create the directory if needed.
+	(install-arch-dep, mkdir): No need to make site-lisp directories.
+
 	* Makefile.in (write_subdir): New.
 	(install-arch-indep, install-arch-dep): Use $write_subdir.
 
