--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-17  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (install-etc, mkdir):
+	Make relevant directories in install-etc rather than mkdir.
+
 	* Makefile.in (write_subdir): Create the directory if needed.
 	(install-arch-dep, mkdir): No need to make site-lisp directories.
 
