--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-18  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (install): Ensure $bindir exists.
+
 2012-05-17  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (ns_appbindir): New, set by configure.
