--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2012-05-18  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (install-arch-dep): Ensure bindir exists.
+	Drop mkdir dependency.
+	(install-arch-indep): Ensure docdir, infodir, mandir exist.
+	(install-leim): Drop mkdir dependency.
+	(mkdir): Remove most directories, now made in relevant rules.
+
 	* Makefile.in (install-arch-indep): Combine adjacent loops.
 
 2012-05-17  Glenn Morris  <rgm@gnu.org>
