--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-18  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (install-arch-indep): Remove unneeded chmods.
+	INSTALL_DATA does this for us.
+
 	* Makefile.in (install-arch-dep): Ensure bindir exists.
 	Drop mkdir dependency.
 	(install-arch-indep): Ensure docdir, infodir, mandir exist.
