--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-18  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
+
+	* flyspell.el (flyspell-check-pre-word-p, flyspell-check-word-p)
+	(flyspell-debug-signal-word-checked): Protect delay handling for
+	otherchars against empty otherchars.
+
 2012-05-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/lisp-mode.el (doc-string-elt): Move those properties to
