--- a/etc/NEWS
+++ b/etc/NEWS
@@ -37,6 +37,10 @@ may be useful.
 /usr/pkg/lib to the linker search path.  You must add them yourself if
 you want them.
 
+---
+** On Mac OS X, configure no longer automatically adds the Fink /sw
+directories to the search path.  You must add them yourself if you want them.
+
 
 * Startup Changes in Emacs 24.2
 
