--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2012-05-18  Glenn Morris  <rgm@gnu.org>
 
+	* configure.in (INSTALL_ARCH_INDEP_EXTRA): New output variable.
+	* Makefile.in (INSTALL_ARCH_INDEP_EXTRA): New, set by configure.
+	(install-arch-indep): Don't install-etc for self-contained ns builds.
+
 	* configure.in (GCC_TEST_OPTIONS, NON_GCC_TEST_OPTIONS) <darwin>:
 	No longer unconditonally add /sw directories.  (Bug#2280)
 
