--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-05-18  Eli Zaretskii  <eliz@gnu.org>
+
+	* mail/sendmail.el (mail-yank-region): Recognize
+	rmail-yank-current-message in addition to insert-buffer.  Fixes
+	mail-mode's "C-c C-r" that otherwise does nothing when invoked in
+	a *mail* buffer created through rmail-start-mail with sendmail as
+	mail-user-agent.
+
 2012-05-17  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/cl-macs.el (cl-transform-lambda): Don't add spurious
