--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-18  Rüdiger Sonderfeld <ruediger@c-plusplus.de>
+
+	* calc/calc-lang.el (math-C-parse-bess, math-C-parse-fma):
+	New functions.
+	(math-function-table):  Add support for more C functions.
+
 2012-05-18  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
 
 	* flyspell.el (flyspell-check-pre-word-p, flyspell-check-word-p)
