--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2012-05-18  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in: Install only the relevant DOC file.
+	(install-arch-indep): Delete etc/DOC*.
+	(install-doc): No more need to delete etc/DOC.
+
 	* Makefile.in (install-arch-indep): Split into several rules.
 	(install-doc, innstall-info, install-man): New rules.
 
