--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,9 @@
+2012-05-19  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* doc/misc/calc.texi
+	(Basic Operations on Units, Customizing Calc):
+	Mention `calc-ensure-consistent-units'.
+
 2012-05-14  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* cc-mode.texi: Avoid space before macro in 4th argument of cross
