--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,13 @@
+2012-05-19  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc.el (calc-ensure-consistent-units): New variable.
+
+	* calc/calc-units.el (math-consistent-units-p, math-check-unit-consistency):
+	New functions.
+	(calc-quick-units, calc-convert-units): Use `math-check-unit-consistency' when
+	`calc-ensure-consistent-units' is non-nil.
+	(calc-extract-units): Fix typo.
+
 2012-05-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* vc/vc-bzr.el (vc-bzr-state-heuristic): Save match-data around sha1.
