--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-19  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (leim): No need to set PARALLEL.
+
 2012-05-18  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (install-arch-indep, install-info, install-man):
